src/main/resources/config/webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: re-webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: re-webserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: re-webserver
    spec:
      containers:
      - image: webserver:latest
        imagePullPolicy: Never
        name: re-webserver
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: re-webserver
  labels:
    app: re-webserver
    service: re-webserver
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: re-webserver
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: re-webserver
spec:
  hosts:
  - re-webserver
  http:
  - route:
    - destination:
        host: re-webserver
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: re-webserver
spec:
  host: re-webserver
  subsets:
  - name: v1
    labels:
      version: v1
